--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,14 @@ main{
     height: calc(90vh - 20px);
     padding: 10px 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+main h2{
+    margin-top: 50px;
+    font-size: 40px;
 }
 
 .container{
