--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body{
 header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 50px;
     margin: 20px;
 }
@@ -23,10 +24,13 @@ header h1{
     -webkit-text-stroke: 1px black;
 }
 
+#logo{
+    transform: scale(1.3);
+}
+
 #gioca,
 #reset,
 #difficult{
-    margin-top: 10px;
     padding: 2px 10px;
     border: 1px solid rgb(59, 59, 209);
     border-radius: 10px;
@@ -46,6 +50,13 @@ main{
 main h2{
     margin-top: 50px;
     font-size: 40px;
+}
+
+main h3{
+    font-size: 17px;
+    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .container{
